--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -11937,16 +11937,16 @@ a.dashboard-responsive-nav-trigger {
 .fun-facts-container {
 	display: flex;
 	flex-wrap: wrap;
-	width: calc(100% + 30px);
-	margin-bottom: -30px;
+	width: calc(100% + 20px);
+	margin-bottom: -20px;
 }
 .fun-fact {
 	background-color: #fff;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 	border-radius: 0.25rem;
-	padding: 25px;
-	margin-right: 30px;
-	margin-bottom: 30px;
+	padding: 1rem;
+	margin-right: 20px;
+	margin-bottom: 20px;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -11966,10 +11966,11 @@ flex: 1;
 
 .fun-fact-icon {
 	border-radius: 0.25rem;
-	background-color: rgba(0, 0, 0, 0.04);
-	flex: 0 0 80px;
-	height: 80px;
+	/*background-color: rgba(0, 0, 0, 0.04);*/
+	flex: 0 0 48px;
+	height: 48px;
 	display: flex;
+	margin-right: 1rem;
 	text-align: center;
 }
 .fun-fact-icon i {
