--- a/assets/default/css/style.css
+++ b/assets/default/css/style.css
@@ -324,18 +324,40 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
 /* ---------------------------------- */
 /* Photo Box
 ------------------------------------- */
+#profile-portfolio-data{
+	margin-bottom: -1.5rem;
+}
 .photo-box-portfolio {
 	border-radius: 4px;
-	height: 325px;
+	height: 215px;
 	display: block;
 	position: relative;
 	background-size: cover;
 	background-position: 100%;
 	box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 	transition: 0.4s;
-	margin: 0 0 25px 0;
+	margin: 0 0 1.5rem 0;
 }
 
+.portfolio-action-btn{
+	display:none;
+	position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255 255 255 / 75%);
+    z-index: 9;
+    align-items: center;
+    justify-content: center;
+	transition:all 0.3s ease-in-out;
+}
+.photo-box-portfolio:hover .portfolio-action-btn {
+	display:flex;
+}
+.photo-box-portfolio:hover .portfolio-action-btn .btn{
+	margin:0 0.25rem;
+}
 .photo-box-portfolio:before {
 	content: "";
 	position: absolute;
@@ -343,8 +365,8 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background: #333;
-	opacity: 0.5;
+	background: #000;
+	opacity: 0.65;
 	border-radius: 4px;
 	transition: 0.4s;
 }
@@ -374,16 +396,15 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
 	font-size: 15px;
 	line-height: 28px;
 }
-
 .photo-box-portfolio-content span {
 	color: #333;
 	background: #fff;
-	border-radius: 4px;
-	font-size: 15px;
-	font-weight: 500;
-	padding:  4px 10px;
-	line-height: 20px;
-	margin-top: 8px;
+	border-radius: 0.25rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    padding: 3px 10px;
+    line-height: 18px;
+    margin-top: 5px;
 	display: inline-block;
 }
 
@@ -392,11 +413,10 @@ input.with-border.is-invalid, input.with-border.is-invalid, input.with-border.is
 	box-shadow: 0 4px 12px rgba(102,103,107,0.25);
 	transform: translateY(-10px);
 }
-
-.photo-box-portfolio:hover:before {
+/*.photo-box-portfolio:hover:before {
 	background: #66676b;
 	opacity: 0.95;
-}
+}*/
 
 /* Small Photobox Styles */
 .photo-box-portfolio.small { height: 160px; margin-bottom: 30px }
@@ -914,8 +934,8 @@ ul.skill-tags > li {
     top: 30px;
     transform: rotate(45deg);
 }
-.tab-pane ul.dashboard-box-list.if-button > li {
-    padding-right: 70px;
+ul.dashboard-box-list.if-button > li {
+    padding-right: 100px;
 }
 .section {
 	padding:2rem 0
@@ -1285,10 +1305,23 @@ ul.list-group-0 > li{
     left: -10px;
     color: var(--siteColor);
 }
-
-
-
-
+.pipe{
+	color: #aaa !important;
+	font-weight: 300;
+	margin:0 0.5rem;
+    position: relative;
+	top: -2px;
+}
+.freelancers-container .freelancer .freelancer-name span,
+.freelancers-container .freelancer-overview p {
+    display: block;
+    display: -webkit-box;
+    max-width: 100%;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 
 
