--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -143,7 +143,6 @@ header.fullwidth .container {
 	float: left;
 }
 .fullwidth .header-widget:last-of-type {
-	padding-right: 5px;
 	float: right;
 	border-right: none;
 }
@@ -152,7 +151,7 @@ header.fullwidth .container {
 	margin-right: -5px;
 }
 .fullwidth .header-widget:last-of-type {
-	padding-right: 5px;
+	padding-left: 0;
 	margin-right: 0;
 }
 /* Notification Avatar*/
@@ -479,7 +478,7 @@ a.header-notifications-button i {
 	padding: 0;
 }
 .header-notifications.user-menu {
-	margin: 0 -5px;
+	margin-right: 0;
 }
 .user-menu .header-notifications-trigger, .user-menu .header-notifications-trigger a {
 	top: 50%;
@@ -1688,14 +1687,14 @@ float: left;
  text-align: left;
 }
  .mmenu-trigger {
- margin: 0 -5px 0 20px;
+ margin: 0 -5px 0 5px;
  top: 20px;
  float: right;
 }
- #header .right-side .header-widget {
+/* #header .right-side .header-widget {
  border-right: 1px solid #e0e0e0;
  margin-right: -1px;
-}
+}*/
  .header-widget {
 padding: 0 15px;
 }
@@ -2021,7 +2020,7 @@ padding-bottom: 45px
  padding: 20px 0 40px 0;*/
  flex-direction: column;
 }
-#footer p, .footer-social-links{
+#footer p, ul.footer-social-links{
 	margin-bottom:1rem;
 }
 }
@@ -2079,36 +2078,33 @@ display: block
 }
 .pagination ul li {
 	display: inline-block;
-	margin: 0;
-	padding: 0;
+	margin-right: 0.25rem;
 }
 .pagination ul li a, .pagination-next-prev ul li a {
-	padding: 10px 0;
 	border-bottom: none;
 	display: inline-block;
 	color: #333;
 	background-color: transparent;
-	font-weight: 700;
+	font-family: 'FSJoey', Helvetica, sans-serif;
+	font-weight: 600;
 	margin:0;
-	line-height: 22px;
 	-webkit-transition: all 200ms ease-in-out;
 	-moz-transition: all 200ms ease-in-out;
 	-o-transition: all 200ms ease-in-out;
 	-ms-transition: all 200ms ease-in-out;
 	transition: all 200ms ease-in-out;
-	font-size: 14px;
-	float: left;
 }
 .pagination ul li a {
-    border-radius: 0.25rem;
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    line-height: 40px;
+	border-radius: .25rem;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
 }
 .pagination ul li a i {
-	line-height: 44px;
-	font-size: 24px;
+	font-size: 1.5rem;
+    line-height: 0;
+    top: 3px;
+    position: relative;
 }
 .pagination ul li.blank {
 	color: #a0a0a0;
@@ -2117,12 +2113,10 @@ display: block
 .section.gray .pagination .pagination-arrow a:hover, .pagination ul li a.current-page, .pagination ul li a:hover {
 	background-color: #333;
 	color: #fff;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2)
 }
 .pagination ul li a.current-page {
 	background-color: #66676b;
 	color: #fff;
-	box-shadow: 0 2px 8px rgba(102, 103, 107, 0.25)
 }
 .pagination .pagination-arrow a {
 	background-color: #f0f0f0;
@@ -3949,9 +3943,9 @@ text-align: center;
  .job-listing .job-listing-company-logo {
 display: none;
 }
- .job-listing .job-listing-title {
-padding-right: 10%;
-}
+/*.job-listing .job-listing-title {
+	padding-right: 10%;
+}*/
 }
 /* ---------------------------------- */
 /* Job Listing - Compact List Layout
@@ -11768,11 +11762,11 @@ a.dashboard-responsive-nav-trigger {
 	list-style: none;
 	padding: 0;
 	margin:0;
-	/*margin: 25px 0 0 0;*/
+	/*margin: 1.5rem 0 0 0;*/
 }
-.dashboard-nav ul:first-child {
-	margin: 30px 0 0 0;
-}
+/*.dashboard-nav ul:first-child {
+	margin: 1rem 0 0 0;
+}*/
 /*.dashboard-nav ul:before {
 	content: attr(data-submenu-title);
 	padding: 0 35px;
@@ -11793,7 +11787,7 @@ a.dashboard-responsive-nav-trigger {
 	color: #000;
 	display: block;
 	font-family:'FSJoey', Helvetica, sans-serif;	
-	padding: 10px 20px;
+	padding: 0.625rem 1rem;
 	transition: 0.3s;
 	cursor: pointer;
 	position: relative;
@@ -12169,7 +12163,7 @@ ul.dashboard-box-list {
 ul.dashboard-box-list > li {
 	border-bottom: 1px solid #e4e4e4;
 	padding: 0;
-	padding: 0.75rem 1.25rem;
+	padding: 1rem 1.25rem;
 	display: flex;
 	align-items: center;
 	position: relative;
@@ -12340,7 +12334,7 @@ ul.dashboard-box-list > li:hover {
 	display: inline-block;
 	position: relative;
 	top: -2px;
-	margin: 0 0 4px 4px;
+	margin: 0 4px 4px 0;
 }
 .job-listing-footer .dashboard-status-button{
 	margin-bottom:-3px;
@@ -12733,9 +12727,12 @@ max-width: 100%
  .dashboard-content-inner {
 min-height: auto !important;
 }
-	/* Dashboard Mobile Basis */
-	.dashboard-sidebar .dashboard-nav-container,  .dashboard-content-inner {
-padding: 15px;
+/* Dashboard Mobile Basis */
+.dashboard-sidebar .dashboard-nav-container,  .dashboard-content-inner {
+	padding: 15px;
+}
+.dashboard-sidebar {
+	display:none;
 }
 /* .dashboard-sidebar-inner {
 padding-bottom: 30px;
@@ -12804,9 +12801,9 @@ margin-top: 15px;
  .dashboard-nav ul:before {
 padding: 0 29px;
 }
-.dashboard-nav ul li a {
+/*.dashboard-nav ul li a {
 	padding: 0.625rem 1rem;
-}
+}*/
  .dashboard-nav ul,  .dashboard-nav.active ul li ul,  .dashboard-nav ul li ul {
  visibility: hidden;
  opacity: 0;
@@ -12866,12 +12863,15 @@ opacity: 1;
  margin: 0 15px 15px 0;
 }
 }
- @media (max-width: 767px) {
- .fun-fact {
+@media (max-width: 575px) {
+.fun-fact {
  flex: 1 1 100%;
  max-width: 100%;
 }
- #titlebar #breadcrumbs,  .dashboard-headline #breadcrumbs {
+}
+
+ @media (max-width: 767px) {
+#titlebar #breadcrumbs,  .dashboard-headline #breadcrumbs {
  right: 0;
  position: relative;
  top: 0;
@@ -12879,7 +12879,7 @@ opacity: 1;
  margin-top: 30px;
  max-width: 100%;
 }
- .buttons-to-right:not(.single-right-button) {
+.buttons-to-right:not(.single-right-button) {
  position: relative;
  transform: none;
  top: 0;
@@ -13151,6 +13151,7 @@ width: 17px;
 	display: block;
 	position: relative;
 	margin-bottom: 25px;
+	padding-right:40px;
 }
 .message-bubble .message-avatar {
 	background-color: #ddd;
@@ -13164,7 +13165,7 @@ width: 17px;
 	height: 40px;
 }
 .message-bubble .message-text {
-	margin-left: 70px;
+	margin-left: 55px;
 	margin-top: 4px;
 	background-color: #eff8ec;
 	background-color: rgb(100 190 67 / 0.1);
@@ -13178,7 +13179,7 @@ width: 17px;
 	float: right;
 }
 .message-bubble .message-text p {
-	line-height: 1;
+	font-size: 0.938rem;
 	padding: 0;
 	margin: 0;
 }
