--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -13158,6 +13158,10 @@ width: 17px;
 	margin-bottom: 25px;
 	padding-right:40px;
 }
+.message-bubble.me {
+	padding-left:40px;
+	padding-right:0;
+}
 .message-bubble .message-avatar {
 	background-color: #ddd;
     border-radius: 50%;
@@ -13172,8 +13176,7 @@ width: 17px;
 .message-bubble .message-text {
 	margin-left: 55px;
 	margin-top: 4px;
-	background-color: #eff8ec;
-	background-color: rgb(100 190 67 / 0.1);
+	background-color: #eee;	
 	border-radius: 0.25rem;
 	padding: 0.625rem 1rem;
 	position: relative;
@@ -13196,9 +13199,9 @@ width: 17px;
 }
 .message-bubble.me .message-text {
 	margin-left: 0;
-	margin-right: 70px;
+	margin-right: 55px;
 	background-color: #66676b;
-	color: #fff;
+	/*color: #fff;*/
 	position: relative;
 }
 /* Arrow */
@@ -13208,7 +13211,7 @@ width: 17px;
 	height: 0;
 	border-top: 6px solid transparent;
 	border-bottom: 6px solid transparent;
-	border-right: 6px solid rgb(100 190 67 / 0.1);
+	border-right: 6px solid #eee;
 	left: -6px;
 	right: auto;
 	top: 12px;
@@ -13234,7 +13237,7 @@ width: 17px;
 	height: 1px;
 	background-color: #eaeaea;
 	display: block;
-	max-width: 30%;
+	max-width: 100%;
 	margin: 0 auto;
 	position: relative;
 	top: 14px;
