--- a/hackground/assets/v3/css/adminlte.css
+++ b/hackground/assets/v3/css/adminlte.css
@@ -20534,14 +20534,12 @@ a.close.disabled, a.disabled.mailbox-attachment-close {
   .col-xl-3 .small-box h3,
   .col-lg-3 .small-box h3,
   .col-md-3 .small-box h3 {
-    font-size: 2.2rem;
+    font-size: 2.5rem;
   }
 }
-
 .small-box p {
   font-size: 1rem;
 }
-
 .small-box p > small {
   color: #f8f9fa;
   display: block;
@@ -30115,7 +30113,7 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-blue {
-  background-color: #64be43 !important;
+  background-color: #007bff !important;
 }
 
 .bg-blue,
