--- a/assets/default/css/bootstrap.css
+++ b/assets/default/css/bootstrap.css
@@ -5152,8 +5152,8 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: var(--siteColor);
+  color: #007bff;
+  background-color: #e5f2ff;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
