--- a/assets/default/css/daterangepicker.css
+++ b/assets/default/css/daterangepicker.css
@@ -136,11 +136,11 @@
     width: 50px;
     margin-bottom: 0; }
   .daterangepicker .input-mini {
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #dfdfdf;
+    border-radius: 0.2rem;
     color: #555;
-    height: 30px;
-    line-height: 30px;
+    height: 33px;
+    line-height: 33px;
     display: block;
     vertical-align: middle;
     margin: 0 0 5px 0;
@@ -172,32 +172,32 @@
       cursor: not-allowed; }
 
 .ranges {
-  font-size: 11px;
   float: none;
   margin: 4px;
-  text-align: left; }
-  .ranges ul {
+}
+.ranges ul {
     list-style: none;
     margin: 0 auto;
     padding: 0;
     width: 100%; }
-  .ranges li {
-    font-size: 13px;
-    background-color: #f5f5f5;
-    border: 1px solid #f5f5f5;
-    border-radius: 4px;
-    color: #08c;
-    padding: 3px 12px;
-    margin-bottom: 8px;
-    cursor: pointer; }
-    .ranges li:hover {
-      background-color: #08c;
-      border: 1px solid #08c;
-      color: #fff; }
-    .ranges li.active {
-      background-color: #08c;
-      border: 1px solid #08c;
-      color: #fff; }
+.ranges li {
+	font-size: 13px;
+	background-color: #f5f5f5;
+	border: 1px solid #f5f5f5;
+	border-radius: 4px;
+	color: #08c;
+	padding: 3px 12px;
+	margin-bottom: 8px;
+	cursor: pointer;
+}
+.ranges li:hover {
+  background-color: #08c;
+  border: 1px solid #08c;
+  color: #fff; }
+.ranges li.active {
+  background-color: #08c;
+  border: 1px solid #08c;
+  color: #fff; }
 
 /*  Larger Screen Styling */
 @media (min-width: 564px) {
