--- a/assets/default/css/lang_en.css
+++ b/assets/default/css/lang_en.css
@@ -78,10 +78,23 @@ ul.display-inline li:last-child {
 .list-3 li, .list-2 li, .list-1 li {
 	padding-left: 24px;
 }
+/*
+RTL SPACE 
+*/
 .header-widget:last-of-type {
 	padding-right: 0;
 	float: right;
 	border-right: none;
+}
+.header-notifications {
+	padding-right: 15px;
+}
+.header-notifications:last-child {
+	margin-right: -15px;
+}
+.header-notifications-content.with-icon .notification-text{	
+	padding-left:20px;
+	padding-right: 5px;
 }
 .fun-fact-text {
 	margin-left: 20px
@@ -96,13 +109,13 @@ ul.display-inline li:last-child {
 	right: 1.25rem;
 }
 .dashboard-nav ul li ul li {
-	padding-left: 50px;
+	padding-left: 40px;
 }
 .header-notifications-dropdown {
 	right: -15px
 }
 .user-name {
-	padding: 2px 0 0 15px;
+	padding-left: 1rem;
 }
 .searchbox .input-group:before {
 	left: 18px
@@ -124,15 +137,11 @@ ul.display-inline li:last-child {
 .skill_search .chip > a {
     right: 0.5rem;
 }
-.copy-url .copy-url-button {
-	border-radius: 0 4px 4px 0
-}
-
 .single-page-header .left-side {
-	padding-right: 25px;
+	padding-right: 1.25rem;
 }
 .single-page-header .header-image {
-	margin-right: 25px
+	margin-right: 1.25rem
 }
 .boxed-list-headline h3 i,
 .single-page-header .header-details ul li img.flag,
@@ -156,6 +165,9 @@ ul.skills li {
 }
 .boxed-list-item .item-details .detail-item {
 	margin-right: 15px
+}
+.boxed-list-item .item-details .star-rating {
+	margin-right: 1rem;
 }
 .icon-round{		
 	margin-left: 10px;
@@ -232,7 +244,6 @@ em.mm-counter+a.mm-fullsubopen+a, em.mm-counter+a.mm-fullsubopen+span {
 .fun-fact {
 	margin-right: 15px
 }
-
 }
 
  @media (max-width: 768px) {
@@ -272,8 +283,6 @@ ol.counter-list li:after {
 	left: -2.5em;
 	text-align: right;
 }
-
-
 .featuredimg {
 	right:-9px
 }
@@ -283,13 +292,21 @@ ol.counter-list li:after {
 #slide-nav .navbar-toggle {
     float: left
 }
+/*
+
+RTL SPACE
+
+
+*/
 .radio-inline, .checkbox-inline {
 	padding-left:0
 }
 .radio-inline + .radio-inline, .checkbox-inline + .checkbox-inline {
 	margin-left:10px;
 }
-
+.radio-inline {
+	margin-right:1rem
+}
 .magic-radio + label, .magic-checkbox + label {
 	padding-left: 28px;
 }
@@ -329,6 +346,9 @@ div.dataTables_paginate {
 .ecdevsec .user-sidebar-container .sidebar-close-alt {
 	right: 15px
 }
+/*
+RTL SPACE
+*/
 .secondary_info {
 	right:0
 }
@@ -349,8 +369,17 @@ ul.tab li:first-child {
 div.dataTables_wrapper div.dataTables_filter input {
 	margin-left:0.5em
 }
+/*
+RTL SPACE
+*/
 .messages-container-inner .messages-inbox {
 	border-right: 1px solid #eaeaea
+}
+.messages-container-inner .message-by-headline span {
+	right: 1rem;
+}
+.message-by-headline span {
+	float: right;
 }
 .message-action {
 	right: 1rem
@@ -373,12 +402,67 @@ div.dataTables_wrapper div.dataTables_filter input {
 .messages-container-inner .messages-inbox .filtertable .message-by {
 	margin-left: 60px
 }
+.message-bubble {
+	padding-right:40px;
+}
+.message-bubble.me {
+	padding-left:40px;
+	padding-right:0;
+}
+.message-bubble .message-avatar {
+	left: 0;
+}
+/* Message Bubble "me" */
+.message-bubble.me .message-avatar {
+	left: auto;
+	right: 0;
+}
 .message-bubble .message-text {
 	margin-left: 55px;
 }
 .message-bubble.me .message-text {
+	float: right;
 	margin-left: 0;
 	margin-right: 55px;
+}
+.fav-star{
+	right:-5px;
+}
+.message-bubble.me .fav-star{
+	left: -5px;
+	right:auto
+}
+.fixed-action-btn {
+    right: -30px;
+}
+.message-bubble.me .fixed-action-btn {
+    left: -30px;
+	right: auto;
+}
+.fixed-action-btn ul {
+    left: 15px;
+}
+.message-bubble.me .fixed-action-btn ul {
+	left: auto;
+    right: 15px;
+}
+/* Arrow */
+.message-bubble .message-text:before {
+	border-right: 6px solid #eee;
+	left: -6px;
+	right: auto;
+}
+.message-bubble.me .message-text:before {
+	border-left: 6px solid rgb(100 190 67 / 0.1);
+	border-right: none;
+	right: -6px;
+	left: auto;
+}
+.message-reply .uploadButton {
+	margin:0.1rem 1rem 0 auto;
+}
+.attachmentFile {
+	border-left: 1px solid #dee2e6;
 }
 .header-notifications-dropdown:before {
 	right: 43px;
@@ -398,6 +482,49 @@ div.dataTables_wrapper div.dataTables_filter input {
 .user-who-bid > span{
 	margin-left: 2px;
 }
+.pricing-group > .btn {
+    margin-right: 1.25rem;
+}
+.range_inputs .btn:first-child{
+	margin-right:2px;
+}
+.status-icon, .notification-avatar:after, .user-avatar:after {
+	right: 0;
+}
+.bootstrap-select.btn-group .dropdown-toggle .filter-option {
+	float:left;
+}
+.bootstrap-select.btn-group .dropdown-toggle .caret {
+	right: 20px;
+}
+ul.totalList > li {
+    border-right: 1px solid #dfdfdf;
+}
+ul.totalList > li:last-child {
+	border-right:none
+}
+.job-overview .job-overview-inner ul li {
+	padding-left: 2rem;
+}
+.job-overview .job-overview-inner ul li i {
+	left: 0;
+}
+.single-page-header .salary-box {
+	margin-left: auto;
+}
+.toggleUD {
+    right: 1.25rem;
+}
+.number {
+    left: 1.25rem;
+}
+.milestone-item {
+	padding-left:1.25rem
+}
+.brr-0 {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
 
 @media (min-width: 768px) {
 .signup:before {
@@ -405,6 +532,9 @@ div.dataTables_wrapper div.dataTables_filter input {
 }
 .signup:after {		
 	background-color:#29b6f6;	
+}
+ul.totalList > li:nth-child(4n) {
+	border-right:none
 }
 
 }
