--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -134,7 +134,6 @@ header.fullwidth .container {
 	height: 100%;
 	/*border-left: 1px solid #e0e0e0;*/
 	padding: 0 15px;
-	text-align: left;
 	float: left;
 }
 .fullwidth .header-widget:last-of-type {
@@ -215,11 +214,7 @@ color: #555;
 .header-notifications {
 	height: 100%;
 	display: inline-block;
-	padding-right: 15px;
 	position: relative;
-}
-.header-notifications:last-child {
-	margin-right: -15px;
 }
 .header-notifications-trigger, .header-notifications-trigger a {
 	font-size: 22px;
@@ -266,7 +261,6 @@ top: -8px;
 	padding: 0;
 	position: absolute;
 	top: calc(100% - 10px);
-	text-align: left;
 	z-index: 100;
 	transform: scale(0.95);
 	opacity: 0;
@@ -422,10 +416,6 @@ button.mark-as-read:hover {
 	line-height: 23px;
 	font-size: 0.938rem;
 }
-.header-notifications-content.with-icon .notification-text{	
-	padding-left:20px;
-	padding-right: 5px;
-}
 .header-notifications-content .notification-msg-text {
 	display: inline-block;
 	line-height: 23px;
@@ -480,7 +470,6 @@ a.header-notifications-button i {
 .user-menu .header-notifications-dropdown {
 	top: calc(100% - 0px);
 	width: 290px;
-	right: -10px;
 }
 .user-menu .header-notifications-dropdown:before {
 	right: 23px;
@@ -496,7 +485,6 @@ a.header-notifications-button i {
 	width: 12px;
 	background-color: #c0c0c0;
 	bottom: 0;
-	right: 0;
 	display: block;
 	border: 2px solid #fff;
 	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
@@ -1853,7 +1841,7 @@ ul.social-links li {
 	display: inline-block;	
 	margin-right:0.5rem;
 }
-ul.social-links li a {	
+ul.social-links li > a {	
 	color:var(--siteColor);
 	font-size: 1.125rem;
     width: 36px;
@@ -1865,21 +1853,21 @@ ul.social-links li a {
     justify-content: center;
 	transition: 0.3s;
 }
-.freelancer-socials ul.social-links li a {
+.freelancer-socials ul.social-links li > a {
 	border:1px solid;
 }
-ul.social-links li a:hover {
+ul.social-links li > a:hover {
 	color: #fff;
 	background-color: var(--siteColor);
     border-color: var(--siteColor);
 }
 /* Social Icons */
-ul.footer-social-links li a {
+ul.footer-social-links li > a {
 	background-color: #333;	
 	color: #fff;	
 	transform: translate3d(0, -0.5px, 0);
 }
-ul.footer-social-links li a:hover {
+ul.footer-social-links li > a:hover {
 	/*opacity: 1;*/
 	background-color:var(--siteColor);
 }
@@ -2454,9 +2442,6 @@ right: auto;
 	display: flex;
 	align-items: center;
 }
-.single-page-header .left-side {
-	padding-right: 30px;
-}
 .single-page-header .right-side {
     flex-direction: column;
 	max-width: 35%;
@@ -2474,7 +2459,6 @@ max-width: 30%;
 .single-page-header .header-image {
 	height: 140px;
 	flex: 0 0 140px;
-	margin-right: 1.25rem;
 	background: #fff;
 	border-radius: 0.25rem;
 	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.1);
@@ -2594,7 +2578,6 @@ max-width: 140px;
 	margin-top:2rem;
 	padding: 10px 15px;*/
 	display: inline-block;	
-	margin-left: auto;
 }
 .salary-box .salary-type {
 	color: #777;
@@ -3913,7 +3896,6 @@ text-align: center;
 }
 .job-listing .job-listing-footer ul li {
 	display: inline-block;
-	margin-right: 14px;
 	color: #777;
 }
 .job-listing .job-listing-footer ul li:last-child {
@@ -5793,15 +5775,10 @@ box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.15);
 .copy-url {
 	display: flex;
 }
-.copy-url input {
-	border-radius: 4px 0 0 4px;
-	border-right: 0;
-}
 .copy-url .copy-url-button {
 	min-width: 48px;
 	background-color: #66676b;
 	color: #fff;
-	border-radius: 0 4px 4px 0;
 }
 /* ---------------------------------- */
 /* Share Buttons
@@ -8834,7 +8811,6 @@ right: 40px;
 .simplebar-track {
 	z-index: 1;
 	position: absolute;
-	right: 0;
 	bottom: 0;
 	width: 11px;
 	height: calc(100% - 6px);
@@ -8842,7 +8818,6 @@ right: 40px;
 }
 .simplebar-scrollbar {
 	position: absolute;
-	right: 6px;
 	width: 5px;
 	min-height: 10px;
 }
@@ -10062,7 +10037,6 @@ select.bs-select-hidden, select.selectpicker {
 }
 .bootstrap-select > .dropdown-toggle {
 	width: 100%;
-	padding-right: 25px;
 	z-index: 1;
 }
 .bootstrap-select > .dropdown-toggle.bs-placeholder, .bootstrap-select > .dropdown-toggle.bs-placeholder:hover, .bootstrap-select > .dropdown-toggle.bs-placeholder:focus, .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
@@ -10152,11 +10126,9 @@ select.bs-select-hidden, select.selectpicker {
 .bootstrap-select.btn-group .dropdown-toggle .filter-option {
 	overflow: hidden;
 	width: 100%;
-	text-align: left;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	max-width: 90%;
-	float: left;
 	display: block;
 }
 .bootstrap-select.btn-group .dropdown-menu li.hidden {
@@ -10173,7 +10145,6 @@ select.bs-select-hidden, select.selectpicker {
 .bootstrap-select.btn-group .dropdown-toggle .caret {
 	position: absolute;
 	top: 50%;
-	right: 20px;
 	margin-top: -2px;
 	vertical-align: middle;
 	transition: 0.35s;
@@ -11296,10 +11267,8 @@ width: 100%;
 .boxed-list-item .item-details .star-rating {
 	top: -2px;
 	position: relative;
-	margin-right: 15px;
 }
 .boxed-list-item .item-details .detail-item {
-	margin-right: 15px;
 	color: #777;
 }
 .boxed-list-item .item-details .detail-item a {
@@ -11431,7 +11400,6 @@ width: 100%;
 .job-overview .job-overview-inner ul li {
 	position: relative;
 	display: block;
-	padding-left: 38px;
 	margin-bottom: 1rem;
 }
 .job-overview .job-overview-inner ul li:last-child {
@@ -11447,7 +11415,6 @@ width: 100%;
 }
 .job-overview .job-overview-inner ul li i {
 	position: absolute;
-	left: 0;
 	top: 0;
 	font-size: 24px;
 	color: #66676b;
@@ -11787,7 +11754,6 @@ a.dashboard-responsive-nav-trigger {
 	font-size: 1.063rem;
 }
 .dashboard-nav ul li a i {
-	padding-right: 5px;
 	width: 20px;
 	font-size: 20px;
 	color: #909090;
@@ -11795,14 +11761,18 @@ a.dashboard-responsive-nav-trigger {
 	position: relative;
 	top: 3px;
 }
+.dashboard-nav ul li.active-submenu ul li a i {
+	font-size:1rem;
+	margin:0;
+}
 /* Hover State */
 .dashboard-nav ul li ul li:hover a {
 	padding-left: 4px;
 }
-.dashboard-nav ul li.active-submenu a i, .dashboard-nav ul li.active a i, .dashboard-nav ul li:hover a i {
+/*.dashboard-nav ul li.active-submenu a i,*/ .dashboard-nav ul li.active a i, .dashboard-nav ul li:hover a i {
 	color: #66676b;
 }
-.dashboard-nav ul li.active-submenu, .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
+/*.dashboard-nav ul li.active-submenu,*/ .dashboard-nav ul li.active, .dashboard-nav ul li:hover {
 	border-color: #66676b;
 	background-color: rgba(102, 103, 107, 0.04);
 }
@@ -11882,7 +11852,7 @@ a.dashboard-responsive-nav-trigger {
 	position: absolute;
 	top: 15px;
 }
-.dashboard-nav ul li.active-submenu a:after, .dashboard-nav ul li.active a:after/*, .dashboard-nav ul li:hover a:after*/ {
+/*.dashboard-nav ul li.active-submenu a:after,*/ .dashboard-nav ul li.active a:after/*, .dashboard-nav ul li:hover a:after*/ {
 	color: #66676b;
 	background: rgba(102, 103, 107, 0.13);
 	opacity: 0.8;
@@ -12383,6 +12353,7 @@ ul.dashboard-box-list > li:hover {
 	background-color: #333;
 	color: #fff;
 	border-radius: 0.25rem;
+	font-family: 'FSJoey', Helvetica, sans-serif;
 	line-height: 20px;
 	padding: 4px 8px;
 	font-size: 13px;
@@ -13026,14 +12997,12 @@ width: 17px;
 }
 .messages-inbox .message-avatar {
 	position: absolute;
-	left: 30px;
 	top: 50%;
 	transform: translateY(-50%);
 	background-color: #ddd;
     border-radius: 50%;
 }
 .messages-inbox .message-by {
-	margin-left: 85px;
 	color: #666;
 }
 .messages-inbox .message-by p {
@@ -13046,7 +13015,6 @@ width: 17px;
 	display: inline-block;
 }
 .message-by-headline span {
-	float: right;
 	color: #777;
 	font-size: 14px;
 }
@@ -13109,12 +13077,6 @@ width: 17px;
 	width: 40px;
 	height: 40px;
 }
-.messages-container-inner .messages-inbox .message-avatar {
-	left: 1rem;
-}
-.messages-container-inner .messages-inbox .message-by {
-	margin-left: 55px
-}
 .messages-container-inner .message-by-headline{
 	max-height:17px;
 }
@@ -13130,24 +13092,17 @@ width: 17px;
 	font-size: 0.875rem;
 	position: absolute;
 	top: 10px;
-	right: 1rem;
 }
 /* Message Bubbles */
 .message-bubble {
 	display: block;
 	position: relative;
-	margin-bottom: 25px;
-	padding-right:40px;
-}
-.message-bubble.me {
-	padding-left:40px;
-	padding-right:0;
+	margin-bottom: 20px;
 }
 .message-bubble .message-avatar {
 	background-color: #ddd;
     border-radius: 50%;
 	position: absolute;
-	left: 0;
 	top: 0;
 }
 .message-bubble .message-avatar img {
@@ -13155,17 +13110,12 @@ width: 17px;
 	height: 40px;
 }
 .message-bubble .message-text {
-	margin-left: 55px;
 	margin-top: 4px;
 	background-color: #eee;	
 	border-radius: 0.25rem;
 	padding: 0.625rem 1rem;
 	position: relative;
 	display: inline-block;
-	float: left;
-}
-.message-bubble.me .message-text {
-	float: right;
 }
 .message-bubble .message-text p {
 	font-size: 0.938rem;
@@ -13174,10 +13124,6 @@ width: 17px;
 }
 
 /* Message Bubble "me" */
-.message-bubble.me .message-avatar {
-	left: auto;
-	right: 0;
-}
 .message-bubble.me .message-text {
 	margin-left: 0;
 	margin-right: 55px;
@@ -13192,20 +13138,14 @@ width: 17px;
 	height: 0;
 	border-top: 6px solid transparent;
 	border-bottom: 6px solid transparent;
-	border-right: 6px solid #eee;
-	left: -6px;
-	right: auto;
 	top: 12px;
 	position: absolute;
 }
 .message-bubble.me .message-text:before {
 	border-top: 6px solid transparent;
 	border-bottom: 6px solid transparent;
-	border-left: 6px solid #66676b;
-	border-right: none;
-	right: -6px;
-	left: auto;
 }
+
 /* Message Time Sign */
 .message-time-sign {
 	text-align: center;
@@ -13266,7 +13206,6 @@ width: 17px;
 }
 .message-reply .uploadButton {
 	width:auto;
-	margin:0.1rem 1rem 0 auto;
 	position:relative
 }
 /* Typing Indicastor */
